--- a/JS_Remote.conf
+++ b/JS_Remote.conf
@@ -6,3 +6,6 @@
 # 淘宝
 ^http://.+/amdc/mobileDispatch url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
 ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
+
+#什么值得买
+^https:\/\/www\.smzdm\.com\/?.? url script-request-header smzdm.cookie.js
