--- a/JS_Remote.conf
+++ b/JS_Remote.conf
@@ -1,4 +1,4 @@
-hostname = draw.jdfcloud.com, jdjoy.jd.com, trade-acs.m.taobao.com
+hostname = api.m.jd.com, draw.jdfcloud.com, jdjoy.jd.com, trade-acs.m.taobao.com
 
 # 京东比价
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
