--- a/JS_Remote_Cookie.conf
+++ b/JS_Remote_Cookie.conf
@@ -1,4 +1,4 @@
-hostname = zhiyou.smzdm.com
+hostname = api.m.jd.com, zhiyou.smzdm.com
 
 # 京东 cookie
 ^https:\/\/(api\.m|me-api)\.jd\.com\/(client\.action\?functionId=signBean|user_new\/info\/GetJDUserInfoUnion\?) url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
