--- a/Loon/Script_Remote_Cookie.conf
+++ b/Loon/Script_Remote_Cookie.conf
@@ -1,4 +1,4 @@
-hostname = api.m.jd.com, *.smzdm.com
+hostname = api.m.jd.com, zhiyou.smzdm.com
 
 # 京东 cookie
 http-request ^https:\/\/(api\.m|me-api|ms\.jr)\.jd\.com\/(client\.action\?functionId=signBean|user_new\/info\/GetJDUserInfoUnion\?|gw\/generic\/hy\/h5\/m\/appSign\?) requires-body=true, script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, tag=京东
